--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <footer>
         Feito com amor por
-        <a href="https://instagram.com/bwasistemas" target="_blank">
+        <a href="https://instagram.com/brunoretiro" target="_blank">
           @Brunoretiro</a
         >
       </footer>
